# hannah-life-coach-demo

./: Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  asyncio_run.py  i18n.py  memory_store.py  message_handler.py  openai.py  prompt_template.py  scheduler.py  slack_app.py  trello_utils.py
app/daily_journal/: __init__.py  command_parser.py  daily_journal.py  daily_journal_dispatcher.py  todo_parser.py
app/prompt_templates/en/: daily_journal_summary.jinja2  short_comments.jinja2
app/prompt_templates/zh_CN/: daily_journal_summary.jinja2  short_comments.jinja2
scripts/: openai_cli.py  trello_cli.py
tests/: test_command_parser.py  test_parse_response.py
